# contextual-memory-mcp

./: .env.example  .gitignore  PATCH_NOTES.md  README.md  main.py  pyproject.toml  run-mcp.sh
ContextualMemoryGhidraPlugin/: README.md  build.gradle  extension.properties  settings.gradle
ContextualMemoryGhidraPlugin/src/main/java/contextualmemory/ghidra/: ContextualMemoryPlugin.java
ContextualMemoryGhidraPlugin/src/main/java/contextualmemory/ghidra/db/: ProjectDatabase.java
ContextualMemoryGhidraPlugin/src/main/java/contextualmemory/ghidra/scan/: FunctionRecord.java  GhidraProjectScanner.java  ProgramRecord.java  ScanMode.java
ContextualMemoryGhidraPlugin/src/main/java/contextualmemory/ghidra/util/: DatabaseNaming.java  Hashing.java
ContextualMemoryGhidraPlugin/src/test/java/contextualmemory/ghidra/util/: DatabaseNamingTest.java
core/: config.py  context_builder.py  enums.py  importance.py  importance_service.py  ingestion_service.py  lifecycle.py  lifecycle_service.py  memory_matrix.py  models.py  ranking.py  retrieval_engine.py  stores.py  web_acquisition.py  web_cache.py
database/: migrations.py  repositories.py  schema.py  vector_memory.py
extraction/: markdown_parser.py  visual_parser.py
mcp_server/: server.py
providers/: embeddings.py  web.py
tests/: test_automatic_memory.py  test_cli.py  test_importance.py  test_importance_service.py  test_lifecycle.py  test_lifecycle_service.py  test_memory_matrix_lifecycle.py  test_parser.py  test_ranking.py  test_repository.py  test_stores.py  test_visual_parser.py  test_web_cache.py  test_web_provider.py
